# BankAPI

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt
src/: main.py
src/models/: statement_models.py
src/prompts/: statement_prompt.py
src/routes/: statement_routes.py
src/services/: statement_service.py
src/templates/: index.html
src/utils/: file_utils.py  image_utils.py
