[tool.poetry]
name = "chase-statement-parser"
version = "0.1.0"
description = "FastAPI service for parsing Chase Bank statements using OpenAI"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 